--- a/Viewer/imgui.ini
+++ b/Viewer/imgui.ini
@@ -3,28 +3,8 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Hello, world!]
-Pos=432,426
-Size=549,388
-Collapsed=0
-
-[Imgui Test!]
-Pos=502,108
-Size=627,389
-Collapsed=0
-
-[Stats]
-Pos=61,39
-Size=610,89
-Collapsed=0
-
-[Tiles Editor]
-Pos=210,44
-Size=331,118
-Collapsed=0
-
-[Variable Configuration]
-Pos=418,108
-Size=787,220
+[Tank Viewer]
+Pos=307,219
+Size=99,48
 Collapsed=0
 
