Adding simple gear simulator, Adding battery holder to design

--- a/Simulator/imgui.ini
+++ b/Simulator/imgui.ini
@@ -9,7 +9,12 @@ Size=285,79
 Collapsed=0
 
 [Stats]
-Pos=60,60
+Pos=172,270
 Size=371,50
+Collapsed=0
+
+[Simulator]
+Pos=403,103
+Size=229,77
 Collapsed=0
 
